--- a/dd/bibliography.bib
+++ b/dd/bibliography.bib
@@ -1,79 +1,13 @@
-@online{WebPushApi,
-  key = {Web Push API on MDN},
-  url = {https://developer.mozilla.org/en-US/docs/Web/API/Push_API}
+@book{chiaveLibro,
+  author    = {Andrew S. Tanenbaum and Maarten Van Steen},
+  title     = {Distributed Systems: Principles and Paradigms (2nd Edition)},
+  year      = {2007},
+  publisher = {Prentice Hall},
 }
 
-@online{SonarCloudGh,
-  key = {SonarCloud GitHub},
-  url = {https://next.sonarqube.com/sonarqube/web_api/api/alm_integrations/import_github_project}
-}
-
-@online{SonarCloudWh,
-  key = {SonarCloud WebHooks},
-  url = {https://docs.sonarsource.com/sonarqube/latest/project-administration/webhooks/}
-}
-
-@online{SonarCloudQp,
-  key = {SonarCloud Quality Profile},
-  url = {https://next.sonarqube.com/sonarqube/web_api/api/qualityprofiles/add_project/}
-}
-
-@online{gRPC,
-  key = {gRPC},
-  url = {https://grpc.io/}
-}
-
-@online{gRPCPrinciples,
-  key = {gRPC Principles \& Requirements},
-  url = {https://grpc.io/blog/principles/#services-not-objects-messages-not-references}
-}
-
-@online{SpringCloudGateway,
-  key = {Spring Cloud Gateway},
-  url = {https://spring.io/projects/spring-cloud-gateway/}
-}
-
-@online{Reactor,
-  key = {Project Reactor},
-  url = {https://projectreactor.io/}
-}
-
-@online{Jenkins,
-  key = {Jenkins},
-  url = {https://www.jenkins.io/}
-}
-
-@online{JenkinsScale,
-  key = {Jenkins scaling architecture},
-  url = {https://www.jenkins.io/doc/book/scaling/architecting-for-scale/}
-}
-
-@online{SpringBoot,
-  key = {Spring Boot},
-  url = {https://spring.io/projects/spring-boot/}
-}
-
-@online{SpringAMQP,
-  key = {Spring AMQP},
-  url = {https://spring.io/projects/spring-amqp/}
-}
-
-@online{RabbitMQ,
-  key = {RabbitMQ},
-  url = {https://rabbitmq.com/}
-}
-
-@online{EC2,
-  key = {Amazon EC2},
-  url = {https://aws.amazon.com/it/ec2/}
-}
-
-@online{VPC,
-  key = {Amazon VPC},
-  url = {https://aws.amazon.com/it/vpc/}
-}
-
-@online{ELB,
-  key = {Amazon ELB},
-  url = {https://aws.amazon.com/it/elasticloadbalancing/}
+@book{chiaveLibro2,
+  author    = {B.Liskov and J. Guttag},
+  title     = {Program Development in Java},
+  year      = {2000},
+  publisher = {Pearson education},
 }
